--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -38,7 +38,7 @@
       <li>Resolving conflicts</li>
       <li>Open licenses</li>
       <li>Where to host work, and why</li>
-      <li><a href="{{site.swc_pages}}/git-novice/reference">Reference...</a></li>
+      <li><a href="https://stevenkoenig.github.io/git-novice-topdown/">Reference...</a></li>
     </ul>
   </div>
 </div>
