--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -12,7 +12,7 @@
     </ul>
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-python">Programming in Python</h3>
+    <h3 id="syllabus-python">Plotting and Programming in Python</h3>
     <ul>
       <li>Using libraries</li>
       <li>Working with arrays</li>
@@ -21,7 +21,7 @@
       <li>Loops and conditionals</li>
       <li>Defensive programming</li>
       <li>Using Python from the command line</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
+      <li><a href="{{site.swc_pages}}/python-novice-gapminder/reference">Reference...</a></li>
     </ul>
   </div>
 </div>
